--- a/servant-hasql-realworld-example-app.cabal
+++ b/servant-hasql-realworld-example-app.cabal
@@ -7,14 +7,13 @@ maintainer:    hi@bradparker.com
 build-type:    Simple
 cabal-version: >=1.10
 
-executable servant-hasql-realworld-example-app
-  main-is:
-    Main.hs
-  other-modules:
+library servant-hasql-realworld-example-lib
+  exposed-modules:
     RealWorld.Conduit.Articles.Article
     RealWorld.Conduit.Articles.Database
     RealWorld.Conduit.Database.Schema
     RealWorld.Conduit.Users.Profile
+    RealWorld.Conduit.Users.Database
     Squeal.PostgreSQL.Extended
   build-depends:
     base >=4.11 && <4.12,
@@ -22,6 +21,7 @@ executable servant-hasql-realworld-example-app
     containers,
     contravariant,
     hasql,
+    lens,
     squeal-postgresql,
     text,
     time
@@ -38,3 +38,54 @@ executable servant-hasql-realworld-example-app
     OverloadedStrings
     TypeOperators
     TypeApplications
+    ScopedTypeVariables
+
+executable servant-hasql-realworld-example-app
+  main-is:
+    Main.hs
+  build-depends:
+    base >=4.11 && <4.12,
+    bytestring,
+    hasql,
+    servant-hasql-realworld-example-lib
+  hs-source-dirs:
+    app
+  default-language:
+    Haskell2010
+  ghc-options:
+    -Wall
+  default-extensions:
+    OverloadedStrings
+    DataKinds
+    OverloadedLabels
+    OverloadedStrings
+    TypeOperators
+    TypeApplications
+    TypeFamilies
+    ScopedTypeVariables
+
+executable servant-hasql-realworld-example-database
+  main-is:
+    Main.hs
+  build-depends:
+    base >=4.11 && <4.12,
+    bytestring,
+    hasql,
+    process,
+    squeal-postgresql,
+    servant-hasql-realworld-example-lib
+  hs-source-dirs:
+    database
+  default-language:
+    Haskell2010
+  ghc-options:
+    -Wall
+  default-extensions:
+    OverloadedStrings
+    DataKinds
+    OverloadedLabels
+    OverloadedStrings
+    TypeOperators
+    TypeApplications
+    TypeFamilies
+    ScopedTypeVariables
