Now with it's own database setup

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -1,7 +1,7 @@
 - arguments:
-  - -XOverloadedStrings
   - -XDataKinds
   - -XOverloadedLabels
   - -XOverloadedStrings
-  - -XTypeOperators
+  - -XScopedTypeVariables
   - -XTypeApplications
+  - -XTypeOperators
