--- a/servant-hasql-realworld-example-app.cabal
+++ b/servant-hasql-realworld-example-app.cabal
@@ -1,13 +1,32 @@
+cabal-version: 2.2
 name:          servant-hasql-realworld-example-app
 version:       0.1.0.0
-license:       BSD3
+license:       BSD-3-Clause
 license-file:  LICENSE
 author:        Brad Parker
 maintainer:    hi@bradparker.com
 build-type:    Simple
-cabal-version: >=1.10
+
+common base-dep
+  build-depends:
+    base >=4.11 && <4.12,
+
+common ghc-config
+  default-language:
+    Haskell2010
+  ghc-options:
+    -Wall
+  default-extensions:
+    DataKinds
+    OverloadedLabels
+    OverloadedStrings
+    ScopedTypeVariables
+    TypeApplications
+    TypeOperators
 
 library servant-hasql-realworld-example-lib
+  import: base-dep
+  import: ghc-config
   exposed-modules:
     RealWorld.Conduit.Articles.Article
     RealWorld.Conduit.Articles.Database
@@ -16,7 +35,6 @@ library servant-hasql-realworld-example-lib
     RealWorld.Conduit.Users.Database
     Squeal.PostgreSQL.Extended
   build-depends:
-    base >=4.11 && <4.12,
     bytestring,
     containers,
     contravariant,
@@ -27,65 +45,30 @@ library servant-hasql-realworld-example-lib
     time
   hs-source-dirs:
     src
-  default-language:
-    Haskell2010
-  ghc-options:
-    -Wall
-  default-extensions:
-    OverloadedStrings
-    DataKinds
-    OverloadedLabels
-    OverloadedStrings
-    TypeOperators
-    TypeApplications
-    ScopedTypeVariables
 
 executable servant-hasql-realworld-example-app
+  import: base-dep
+  import: ghc-config
   main-is:
     Main.hs
   build-depends:
-    base >=4.11 && <4.12,
     bytestring,
     hasql,
     servant-hasql-realworld-example-lib
   hs-source-dirs:
     app
-  default-language:
-    Haskell2010
-  ghc-options:
-    -Wall
-  default-extensions:
-    OverloadedStrings
-    DataKinds
-    OverloadedLabels
-    OverloadedStrings
-    TypeOperators
-    TypeApplications
-    TypeFamilies
-    ScopedTypeVariables
 
 executable servant-hasql-realworld-example-database
+  import: base-dep
+  import: ghc-config
   main-is:
     Main.hs
   build-depends:
-    base >=4.11 && <4.12,
     bytestring,
     hasql,
+    network-uri,
     process,
-    squeal-postgresql,
-    servant-hasql-realworld-example-lib
+    servant-hasql-realworld-example-lib,
+    squeal-postgresql
   hs-source-dirs:
     database
-  default-language:
-    Haskell2010
-  ghc-options:
-    -Wall
-  default-extensions:
-    OverloadedStrings
-    DataKinds
-    OverloadedLabels
-    OverloadedStrings
-    TypeOperators
-    TypeApplications
-    TypeFamilies
-    ScopedTypeVariables
