Add validations for article insert / update

--- a/servant-hasql-realworld-example-app.cabal
+++ b/servant-hasql-realworld-example-app.cabal
@@ -44,7 +44,8 @@ library servant-hasql-realworld-example-lib
     lens,
     squeal-postgresql,
     text,
-    time
+    time,
+    validation
   hs-source-dirs:
     src
 
